apps/base/logging-fluentd/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fluent
      app.kubernetes.io/component: fluent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fluent
        app.kubernetes.io/component: fluent
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999 # fluent
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: fluentd
        image: "registry.lan/fluentd:v1.17.0-debian-amd64-1.0-custom"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 24224
          name: fluentd
        - containerPort: 24231
          name: metrics
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          # Using a tcpSocket on the fluentd port generates TLS errors
          httpGet:
            scheme: HTTP
            path: /metrics
            port: metrics
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 192Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: fluentd-config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
        - name: fluentd-config
          mountPath: /fluentd/etc/conf.d
        - name: certs-volume
          mountPath: /fluentd/certs
        - name: cluster-ca-volume
          mountPath: /etc/ssl/cluster/ca.crt
          subPath: ca.crt
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: fluentd-config
        configMap:
          name: fluentd-config
      - name: certs-volume
        secret:
          secretName: fluentd-certs
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
