apps/base/logging-fluentd/deploy/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: fluentd
spec:
  clusterIP: None
  ports:
    - name: fluentd
      port: 24224
      targetPort: 24224
  selector:
    app.kubernetes.io/name: fluent
    app.kubernetes.io/component: fluent
