apps/base/logging-fluentd/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-fluentd
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: fluent
      app.kubernetes.io/component: fluent

  ingress:
    # Allow from fluent-bit
    - ports:
        - port: fluentd
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: logging-fluentbit
          podSelector:
            matchLabels:
              app.kubernetes.io/name: fluent-bit
              app.kubernetes.io/component: fluent-bit
    # Allow from prometheus
    - ports:
        - port: metrics
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
